--- a/jenkins/ci_build/JenkinsFile
+++ b/jenkins/ci_build/JenkinsFile
@@ -1,54 +1,48 @@
-def branch = env.BRANCH_NAME
-def gitURLOpenVXML = 'git@github.com:VHT/OpenVXML.git'
-
-pipeline{
-    agent{
-        label "ubuntu-18-04-jdk"
-    }
-    stages{
+timestamps {
+    def branch = env.BRANCH_NAME
+    def gitURLOpenVXML = 'git@github.com:VHT/OpenVXML.git'
+    
+    node ('ubuntu-18-04-jdk') {
+        deleteDir()
         stage("Git Checkout"){
-            steps{
-                checkout([
-                    $class: 'GitSCM',
-                    branches: [[name: '*/${branch}']],
-                    doGenerateSubmoduleConfigurations: false,
-                    extensions: [],
-                    submoduleCfg: [],
-                    userRemoteConfigs: [
-                        [credentialsId: "${GIT_CREDENTIALS}",
-                        url: "${gitURLOpenVXML}"]
-                    ]
-                ])
-            }
+            checkout([
+                $class: 'GitSCM',
+                branches: [[name: '*/${branch}']],
+                doGenerateSubmoduleConfigurations: false,
+                extensions: [],
+                submoduleCfg: [],
+                userRemoteConfigs: [
+                    [credentialsId: "${GIT_CREDENTIALS}",
+                    url: "${gitURLOpenVXML}"]
+                ]
+            ])
         }
         stage ('Build') {
-            steps{
-                withEnv(["JAVA_HOME=${tool 'jdk8-191-oracle'}", "PATH+JAVA_HOME=${env.JAVA_HOME}/bin"]) {
-                    withMaven( maven: 'maven354' ) {
-            
-                        // Run the maven build
-                        sh """
-                            mvn clean verify
-                            mkdir -p ${WORKSPACE}/OpenVXML/repository
-                            cp -r com.vht.openvxml.releng/com.vht.openvxml.update/target/repository/ ${WORKSPACE}/OpenVXML/
-                            cd ${WORKSPACE}
-                            zip -r OpenVXML.zip OpenVXML/
-                        """
-                    }
+            withEnv(["JAVA_HOME=${tool 'jdk8-191-oracle'}", "PATH+JAVA_HOME=${env.JAVA_HOME}/bin"]) {
+                withMaven( maven: 'maven354' ) {
+        
+                    // Run the maven build
+                    sh """
+                        mvn clean verify
+                        mkdir -p ${WORKSPACE}/OpenVXML/repository
+                        cp -r com.vht.openvxml.releng/com.vht.openvxml.update/target/repository/ ${WORKSPACE}/OpenVXML/
+                        cd ${WORKSPACE}
+                        zip -r OpenVXML.zip OpenVXML/
+                    """
                 }
             }
         }
-        stage("Publish"){
-           steps{
-               node ('win-2016') {
-                   unstash 'OpenVXML'
-                    bat """
-                        7z.exe x OpenVXML.zip
-                        rem Copy the OpenVXML
-                        xcopy /y /i /s /e "%WORKSPACE%\\OpenVXML" "C:\\Builds\\OpenVXML_Builds\\OpenVXML_%OPENVXML_VERSION_NUMBER%.%BUILD_NUMBER%\\*" 
-                    """ 
-                }
-           }
-        }
     }
+
+    node ('win-2016') {
+        deleteDir()
+	    stage ('Publish') {
+            unstash 'OpenVXML'
+            bat """
+                7z.exe x OpenVXML.zip
+                rem Copy the OpenVXML
+                xcopy /y /i /s /e "%WORKSPACE%\\OpenVXML" "C:\\Builds\\OpenVXML_Builds\\OpenVXML_%OPENVXML_VERSION_NUMBER%.%BUILD_NUMBER%\\*" 
+            """ 
+        }
+    }   
 }
