--- a/jenkins/ci_build/JenkinsFile
+++ b/jenkins/ci_build/JenkinsFile
@@ -8,7 +8,7 @@ timestamps {
         stage("Git Checkout"){
             checkout([
                 $class: 'GitSCM',
-                branches: [[name: '*/${branch}']],
+                branches: [[name: "*/${branch}"]],
                 doGenerateSubmoduleConfigurations: false,
                 extensions: [],
                 submoduleCfg: [],
