--- a/jenkins/ci_build/JenkinsFile
+++ b/jenkins/ci_build/JenkinsFile
@@ -32,6 +32,7 @@ timestamps {
                     """
                 }
             }
+            stash includes: 'OpenVXML.zip', name: 'OpenVXML'
         }
     }
 
